--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetInfo.en.resx
@@ -240,4 +240,13 @@
   <data name="Download" xml:space="preserve">
     <value>Download</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Confirm</value>
+  </data>
+  <data name="DeleteConfirmationMessage" xml:space="preserve">
+    <value>Are you sure you want to delete this asset?</value>
+  </data>
 </root>
