--- a/MODAMSWeb/Resources/Areas/Users/Views/Transfers/EditTransfer.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Transfers/EditTransfer.en.resx
@@ -129,8 +129,14 @@
   <data name="Barcode" xml:space="preserve">
     <value>Barcode</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
   <data name="Category" xml:space="preserve">
     <value>Category</value>
+  </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Confirm</value>
   </data>
   <data name="CreateNewTransfer" xml:space="preserve">
     <value>Create New Transfer</value>
@@ -138,8 +144,8 @@
   <data name="DeleteTransfer" xml:space="preserve">
     <value>Delete Transfer</value>
   </data>
-  <data name="DeleteTransferConfirmation" xml:space="preserve">
-    <value>You will not be able to recover this transfer!</value>
+  <data name="DeleteConfirmationMessage" xml:space="preserve">
+    <value>Are you sure you want to delete this transfer</value>
   </data>
   <data name="EditTransfer" xml:space="preserve">
     <value>Edit Transfer</value>
