--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.en.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/EditAsset.en.resx
@@ -237,4 +237,7 @@
   <data name="EditAsset" xml:space="preserve">
     <value>Edit Asset Details</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Cancel</value>
+  </data>
 </root>
