--- a/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetPictures.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Assets/AssetPictures.so.resx
@@ -120,11 +120,23 @@
   <data name="AssetPictures" xml:space="preserve">
     <value>Sawirrada Hantida</value>
   </data>
+  <data name="Cancel" xml:space="preserve">
+    <value>Jooji</value>
+  </data>
   <data name="ChoosePicture" xml:space="preserve">
     <value>Xulo sawir aad geliso</value>
   </data>
+  <data name="Confirm" xml:space="preserve">
+    <value>Xaqiiji</value>
+  </data>
   <data name="Delete" xml:space="preserve">
     <value>Tirtir</value>
+  </data>
+  <data name="DeleteConfirmationMessage" xml:space="preserve">
+    <value>Ma awoodi doontid inaad soo ceshato sawirkan. Ma hubtaa?</value>
+  </data>
+  <data name="DeletePicture" xml:space="preserve">
+    <value>Tirtir Sawirka</value>
   </data>
   <data name="NoPicturesAvailable" xml:space="preserve">
     <value>Lama hayo sawir!</value>
