--- a/MODAMS.Localization/ValidationMessages.resx
+++ b/MODAMS.Localization/ValidationMessages.resx
@@ -129,4 +129,7 @@
   <data name="Required" xml:space="preserve">
     <value>The {0} field is required.</value>
   </data>
+  <data name="StringLength" xml:space="preserve">
+    <value>The {0} must be at least {2} and at most {1} characters long.</value>
+  </data>
 </root>
