--- a/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.so.resx
+++ b/MODAMSWeb/Resources/Areas/Users/Views/Reporting/Index.so.resx
@@ -117,28 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="DevelopedBy" xml:space="preserve">
-    <value>Waxaa sameeyay</value>
+  <data name="AllCategories" xml:space="preserve">
+    <value>Dhammaan Qaybaha</value>
   </data>
-  <data name="Email" xml:space="preserve">
-    <value>Ciwaanka</value>
+  <data name="AllConditions" xml:space="preserve">
+    <value>Dhammaan Heerarka</value>
   </data>
-  <data name="ForgotPassword" xml:space="preserve">
-    <value>Halmaamey Ereysireedkii</value>
+  <data name="AllDonors" xml:space="preserve">
+    <value>Dhammaan Deeq-bixiyeyaasha</value>
   </data>
-  <data name="Login" xml:space="preserve">
-    <value>Soo gal</value>
+  <data name="AllStatuses" xml:space="preserve">
+    <value>Dhammaan Xaaladaha</value>
   </data>
-  <data name="NotRegisteredYet" xml:space="preserve">
-    <value>Weli lama diiwaangelin</value>
+  <data name="AllStores" xml:space="preserve">
+    <value>Dhammaan Bakhaarrada</value>
   </data>
-  <data name="Password" xml:space="preserve">
-    <value>Erayga sirta ah</value>
+  <data name="AMSReporting" xml:space="preserve">
+    <value>Warbixinta Asset Management System-ka</value>
   </data>
-  <data name="Register" xml:space="preserve">
-    <value>Diiwaangeli</value>
+  <data name="AssetReport" xml:space="preserve">
+    <value>Warbixinta Hantida</value>
   </data>
-  <data name="RememberMe" xml:space="preserve">
-    <value>I xusuusnow</value>
+  <data name="Assets" xml:space="preserve">
+    <value>Hantida</value>
+  </data>
+  <data name="Disposals" xml:space="preserve">
+    <value>Ka-Tuurida</value>
+  </data>
+  <data name="Reports" xml:space="preserve">
+    <value>Warbixinno</value>
+  </data>
+  <data name="Transfers" xml:space="preserve">
+    <value>Wareejinno</value>
+  </data>
+  <data name="TransfersReport" xml:space="preserve">
+    <value>Warbixinta Wareejinnada</value>
+  </data>
+  <data name="AllDisposalTypes" xml:space="preserve">
+    <value>Dhammaan Noocyada</value>
+  </data>
+  <data name="GenerateReport" xml:space="preserve">
+    <value>Samee Warbixin</value>
+  </data>
+  <data name="DisposalReport" xml:space="preserve">
+    <value>Warbixinta Ka-Tuurida</value>
   </data>
 </root>
