--- a/MODAMSWeb/Resources/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.en.resx
+++ b/MODAMSWeb/Resources/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.en.resx
@@ -117,49 +117,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="AllCategories" xml:space="preserve">
-    <value>Dhammaan Qaybaha</value>
+  <data name="BackTo" xml:space="preserve">
+    <value>Back to</value>
   </data>
-  <data name="AllConditions" xml:space="preserve">
-    <value>Dhammaan Heerarka</value>
+  <data name="ForgotPassword" xml:space="preserve">
+    <value>Forgot Password</value>
   </data>
-  <data name="AllDonors" xml:space="preserve">
-    <value>Dhammaan Deeq-bixiyeyaasha</value>
+  <data name="FPCMessage" xml:space="preserve">
+    <value>A confirmation email has been sent to your address!</value>
   </data>
-  <data name="AllStatuses" xml:space="preserve">
-    <value>Dhammaan Xaaladaha</value>
-  </data>
-  <data name="AllStores" xml:space="preserve">
-    <value>Dhammaan Bakhaarrada</value>
-  </data>
-  <data name="AMSReporting" xml:space="preserve">
-    <value>Warbixinta Asset Management System-ka</value>
-  </data>
-  <data name="AssetReport" xml:space="preserve">
-    <value>Warbixinta Hantida</value>
-  </data>
-  <data name="Assets" xml:space="preserve">
-    <value>Hantida</value>
-  </data>
-  <data name="Disposals" xml:space="preserve">
-    <value>Ka-Takoorid</value>
-  </data>
-  <data name="Reports" xml:space="preserve">
-    <value>Warbixinno</value>
-  </data>
-  <data name="Transfers" xml:space="preserve">
-    <value>Wareejinno</value>
-  </data>
-  <data name="TransfersReport" xml:space="preserve">
-    <value>Warbixinta Wareejinnada</value>
-  </data>
-  <data name="AllDisposalTypes" xml:space="preserve">
-    <value>Dhammaan Noocyada</value>
-  </data>
-  <data name="GenerateReport" xml:space="preserve">
-    <value>Samee Warbixin</value>
-  </data>
-  <data name="DisposalReport" xml:space="preserve">
-    <value>Warbixinta Ka-Takoorid</value>
+  <data name="SignIn" xml:space="preserve">
+    <value>Sign In</value>
   </data>
 </root>
